# EKA_agri_data_gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/bundles/: bundles.jsonl  crop_maize__weather_arid.json  crop_maize__weather_cool_dry.json  crop_maize__weather_cool_humid.json  crop_maize__weather_heavy_rain.json  crop_maize__weather_hot_dry.json  crop_maize__weather_hot_humid.json  crop_maize__weather_moderate.json  crop_millet__weather_arid.json  crop_millet__weather_cool_dry.json  crop_millet__weather_cool_humid.json  crop_millet__weather_heavy_rain.json  crop_millet__weather_hot_dry.json  crop_millet__weather_hot_humid.json  crop_millet__weather_moderate.json  crop_oilseeds__weather_arid.json  crop_oilseeds__weather_cool_dry.json  crop_oilseeds__weather_cool_humid.json  crop_oilseeds__weather_heavy_rain.json  crop_oilseeds__weather_hot_dry.json  crop_oilseeds__weather_hot_humid.json  crop_oilseeds__weather_moderate.json  crop_pulses__weather_arid.json  crop_pulses__weather_cool_dry.json  crop_pulses__weather_cool_humid.json  crop_pulses__weather_heavy_rain.json  crop_pulses__weather_hot_dry.json  crop_pulses__weather_hot_humid.json  crop_pulses__weather_moderate.json  crop_rice__weather_arid.json  crop_rice__weather_cool_dry.json  crop_rice__weather_cool_humid.json  crop_rice__weather_heavy_rain.json  crop_rice__weather_hot_dry.json  crop_rice__weather_hot_humid.json  crop_rice__weather_moderate.json  (+14 more)
tests/: test_crop_adapter.py
util/: check_google_storage.py  check_models.py  clean_google_storage.py  create_k_size_bundle.py
(+59 files in other folders)
