[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-data-gen-lib"
version = "0.0.1"
description = "Synthetic agronomic reasoning data generator"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eval-data-gen = "agri_data_gen.cli.main:main"
